pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotChangeFixed1.pkl
abstract class Animal {
  fixed name: String
}

class Dog extends Animal {
  name = "Spot"
}
